--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assests/materialize/css/materialize.min.css">
+    <link rel="stylesheet" href="assests/Css/util.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="assests/Css/style.css">
     <title>چایخانه حضرت رضا علیه السلام شاهرود </title>
 </head>
 <body>
-    <nav>
+
+  <!-- navbar section   ---------------   start -->
+
+    <nav class="green darken-3 z-depth-0">
         <div class="nav-wrapper">
-          <a href="#!" class="brand-logo">Logo</a>
+          <a href="#!" class=" ">  صفحه اصلی -  نام کاربر خوش آمدید!  </a>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
             <li><a href="sass.html">Sass</a></li>
@@ -23,13 +27,65 @@
       </nav>
     
       <ul class="sidenav" id="mobile-demo">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">Javascript</a></li>
-        <li><a href="mobile.html">Mobile</a></li>
+        <li>
+          <div class="user-view">
+            <div class="background">
+              <img src="assests/images/bg1.webp" class="width_100">
+            </div>
+            <a href="#user"><img class="circle" src="assests/images/Avator.jfif"></a> 
+            <a href="#mobil"><span class="white-text mobile">09125733551 </span></a> 
+            <a href="#name"><span class="white-text name">محمد مهدی کاشانی </span></a> 
+            <a href="#email"><span class="white-text email">Kashanimehdi.66@gmail.com</span> </a> 
+          </div>
+        </li>
+          <li>
+            <a href="#!">
+              <i class="material-icons">insert_link</i>اصلاح اطلاعات ورود </a>
+            </li>
+          <li><a href="#!">
+            <i class="material-icons">insert_link</i>تغییر رمز  </a>
+          </li>
+          <li><a href="#!">
+            <i class="material-icons">insert_link</i>تنظیمات صفحه  </a>
+          </li>
+            <li><div class="divider"></div>
+          </li>
+           <li><a class="subheader">منوی اصلی </a>
+          </li>
+          <li>
+            <a class="waves-effect" href="#!">انتخاب شیفت خدمتی </a>
+          </li>
+          <li>
+            <a class="waves-effect" href="#!">لیست رزرو های من </a>
+          </li>
+          <li>
+            <a class="waves-effect" href="#!">تکمیل اطلاعات فردی </a>
+          </li>
+          <li>
+            <a class="waves-effect" href="#!">اعلام آمادگی خدمت </a>
+          </li>
+          <li>
+            <a class="waves-effect" href="#!">پویشها </a>
+          </li>
+          <li>
+            <a class="waves-effect" href="#!">کارنامه خدمتی  </a>
+          </li>
+
       </ul>
+<!-- navbar section -----------------------end -->
 
+<!-- home section -----------start----------->
 
+    <section>
+      <img src="assests/images/logo.png" alt="چایخانه حضرت رضا ">
+      <label for="name "> نام کاربری</label>
+      <input type="text">
+      <label for="password "> رمز عبور </label>
+      <input type="text">
+
+    </section>
+
+    <!-- home section      ------------end ------------->
 <script src="assests/materialize/js/materialize.min.js"></script>
 <script src="assests/Js/main.js"></script>
 </body>
